objects/Log__c/fields/Custom_App__c.field-meta.xml
<CustomField>
    <fullName>Custom_App__c</fullName>
    <label>Custom App</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>STANDARD</fullName>
            </value>
            <value>
                <fullName>MATRIX</fullName>
            </value>
            <value>
                <fullName>HERMES</fullName>
            </value>
            <value>
                <fullName>MELISSA</fullName>
            </value>
            <value>
                <fullName>PARTNER</fullName>
            </value>
            <value>
                <fullName>SERVICEPOWER</fullName>
            </value>
            <value>
                <fullName>FLEXFI</fullName>
            </value>
            <value>
                <fullName>COMMERCIAL</fullName>
            </value>
            <value>
                <fullName>ALN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>