objects/Log__c/fields/Save_Mode__c.field-meta.xml
<CustomField>
    <fullName>Save_Mode__c</fullName>
    <label>Save Mode</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ALWAYS</fullName>
            </value>
            <value>
                <fullName>FLAG_BASED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>